src/objects/Product_to_Org_Association_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Map/Par Line Items</relationshipLabel>
        <relationshipName>Product_to_Org_Association_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Map/Par Line Items</relationshipLabel>
        <relationshipName>Product_to_Org_Association_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MAP__c</fullName>
        <label>MAP/PAR</label>
        <referenceTo>MAP__c</referenceTo>
        <relationshipLabel>Map/Par Line Items</relationshipLabel>
        <relationshipName>Product_to_Org_Association_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OPA_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Map/Par Line Items</relationshipLabel>
        <relationshipName>Map_Par_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>autoGrant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>autoGrant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isParEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isParEnabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Map/Par Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>POA-{0000}</displayFormat>
        <label>Map/Par Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Map/Par Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>